@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-05-22T00:45:59Z",
+  "timestamp" : "2022-05-22T08:11:12Z",
   "count_outdated" : 132,
   "uniques_outdated" : 9,
-  "count" : 384,
+  "count" : 324,
   "uniques" : 19,
   "views" : [
     {
       "timestamp": "2022-05-08T00:00:00Z",
-      "count": 61,
-      "count_minmax": [ 61, 67 ],
+      "count": 1,
+      "count_minmax": [ 1, 67 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
