@@ -1,3 +1,10 @@
+2022-05-22T08:11:12Z:
+* notice: last 14d: unq all: 1 192
+* notice: prev accum: outdated-unq outdated-all / unq all: 9 132 / 19 384
+* notice: next accum: outdated-unq outdated-all / unq all: 9 132 / 19 324
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -60 / +0 +0 -0 -66 / 1 1
+* notice: changed dates: [2022-05-08]
+
 2022-05-22T00:45:59Z:
 * notice: last 14d: unq all: 1 252
 * notice: prev accum: outdated-unq outdated-all / unq all: 8 130 / 19 390
